# slam_karto_ceres

./: .clang-format  CMakeLists.txt  README.md  package.xml
config/: mapper_params.yaml
include/slam_karto_ceres/: angle_local_parameterization.h  angle_manifold.h  ceres_solver.h  normalize_angle.h  pose_graph_2d_error_term.h  types.h
launch/: demo.launch  demo.rviz  slam_karto_ceres.launch  valgrind.launch
slam_karto_ceres/: ceres_solver.cc  ceres_solver.h  slam_karto_ceres.cc  slam_karto_ceres.h  slam_karto_ceres_node.cc  types.h
slam_karto_ceres/cost_functor/: angle_manifold.h  normalize_angle.h  pose_graph_2d_error_term.h
src/: ceres_solver.cpp  slam_karto_ceres.cpp
test/: slam_karto_ceres_test.cc
tutorial/: slam_karto_tutorial.cpp
